<resources>
    <string name="app_name">Mrn weather app</string>
    <string name="temp_c">Temp C:</string>
    <string name="weather">Weather:</string>
    <string name="wind">Wind:</string>
    <string name="time_of_result">Time of result:</string>
    <string name="accept">Check the weather</string>
    <string name="wroc_aw">Wrocław</string>
    <string name="pl">pl</string>
    <string name="country">Country:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="city">City:</string>
</resources>
