<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    android:textAlignment="viewEnd"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DAD9D9"
            android:textAlignment="viewEnd"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textView"
                android:layout_width="81dp"
                android:layout_height="28dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/city"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="219dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text=""
                android:textColor="#000000"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/acceptButton" />

            <TextView
                android:id="@+id/tesx"
                android:layout_width="81dp"
                android:layout_height="28dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/humidity"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/acceptButton" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="219dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:textColor="#000000"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/tesx" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="219dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/pressure" />

            <TextView
                android:id="@+id/weather"
                android:layout_width="219dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/temp" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="219dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/weather" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="81dp"
                android:layout_height="28dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/country"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="81dp"
                android:layout_height="28dp"
                android:layout_marginStart="32dp"
                android:text="@string/pressure"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tesx" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="81dp"
                android:layout_height="28dp"
                android:layout_marginStart="32dp"
                android:text="@string/temp_c"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="81dp"
                android:layout_height="28dp"
                android:layout_marginStart="32dp"
                android:text="@string/weather"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="81dp"
                android:layout_height="28dp"
                android:layout_marginStart="32dp"
                android:text="@string/wind"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="154dp"
                android:layout_height="31dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/time_of_result"
                android:textAlignment="viewEnd"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="243dp"
                android:layout_height="37dp"
                android:layout_marginStart="88dp"
                android:layout_marginTop="12dp"
                android:background="#C1C0C0"
                android:text="@string/accept"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countryText" />

            <EditText
                android:id="@+id/cityText"
                android:layout_width="208dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <EditText
                android:id="@+id/countryText"
                android:layout_width="208dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/cityText" />

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="170dp"
                android:layout_height="33dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/wind" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:gravity="end"
                android:text="Made by MRNDesign.eu"
                android:textAlignment="center"
                android:textColorLink="#0023FF"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="118dp"
                android:layout_height="126dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.317"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentTime"
                app:srcCompat="@drawable/ic_wb_sunny" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="118dp"
                android:layout_height="126dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/currentTime"
                app:srcCompat="@drawable/ic_cloud" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>